clusters/default/cryptpad/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cryptpad
  namespace: cryptpad
  labels:
    app: cryptpad
spec:
  selector:
    app: cryptpad
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
